@@ -1,0 +1,22 @@
+#!/usr/bin/php
+<?php
+if (count($argv) < 3) {
+    fprintf(STDERR, $argv[0]." [incoming|outgoing] [campaign-id]\n");
+	exit(0);
+}
+
+require_once ("/var/www/html/modules/agent_console/libs/ECCP.class.php");
+$x = new ECCP();
+try {
+	print "Connect...\n";
+	$x->connect("localhost", "agentconsole", "agentconsole");
+    print "Pidiendo histograma de campaña...\n";
+    $r = $x->getcampaignqueuewait($argv[1], $argv[2]);
+    print_r($r);
+	print "Disconnect...\n";
+	$x->disconnect();
+} catch (Exception $e) {
+	print_r($e);
+	print_r($x->getParseError());
+}
+?>
